--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,9 @@ i {
 #delete-button {
   visibility: hidden;
 }
+
+@media only screen and (min-width: 850px) {
+  .media-q {
+    width: 50%;
+  }
+}
